--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
 
     <string name="username1">John</string>
     <string name="username2">Danny</string>
+    <string name="selectTag">Please Select a Tag</string>
+    <string name="endStory">End Story</string>
     <string-array name="feedlist">
         <item name="1">http://hd.wallpaperswide.com/thumbs/the_avengers_age_of_ultron_team-t1.jpg</item>
         <item name="2">http://hd.wallpaperswide.com/thumbs/mortal_kombat_x_scorpion-t1.jpg</item>
